error.txt
C:\Users\Valon\Desktop\PackageReport\server\server.js:62
            ALTER TABLE tables 
                  ^^^^^

SyntaxError: Unexpected identifier 'TABLE'
    at wrapSafe (node:internal/modules/cjs/loader:1486:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.14.0
